--- a/src/sass/AppMain.scss
+++ b/src/sass/AppMain.scss
@@ -1,40 +1,42 @@
 @import "./Variables.scss";
 
-.outerWrap {
-  background: grey;
-  height: 100vh;
-  min-height: 100%;
-}
-
 .App {
   display: flex;
   height: calc(100vh - 90px);
   background: $greyLight;
 }
 
+.outerWrap {
+  background: grey;
+  height: 100vh;
+  min-height: 100%;
+}
+
 .main {
   width: calc(100% - #{$navBar-width});
-  padding: 20px;
   background-image: linear-gradient(
     to top,
     rgba(94, 0, 0, 0),
     rgba(94, 0, 0, 0),
     rgba(94, 0, 0, 1)
   );
+
+  .upper select {
+    display: none;
+  }
+
   .mainContent {
     color: white;
 
     h1 {
       font-size: 1.5rem;
+      margin: 0;
+      padding: 5px 15px;
+      background-color: rgba(255, 255, 255, 0.1);
     }
   }
+}
 
-  .card {
-    width: 180px;
-    padding: 15px;
-    border-radius: 5px;
-    img {
-      width: 100%;
-    }
-  }
+#playlistContainer {
+  display: none;
 }
