Playlist track list / Bootstrap Modal
@import Bootstrap SCSS
alter SCSS to customize Bootstrap styles
Get Spotify Playlist track info
add Boostrap Modal popup to deisplay track info

--- a/src/sass/AppMain.scss
+++ b/src/sass/AppMain.scss
@@ -1,8 +1,9 @@
 @import "./Variables.scss";
+@import "~bootstrap/scss/bootstrap";
 
 .App {
   display: flex;
-  height: calc(100vh - 90px);
+  height: 420px;
   background: $greyLight;
 }
 
