--- a/src/sass/AppMain.scss
+++ b/src/sass/AppMain.scss
@@ -1,6 +1,17 @@
 @import "./Variables.scss";
 @import "~bootstrap/scss/bootstrap";
 
+body {
+  overflow: hidden;
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 5px 15px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 .App {
   display: flex;
   height: 420px;
@@ -8,9 +19,8 @@
 }
 
 .outerWrap {
-  background: grey;
+  background: black;
   height: 100vh;
-  min-height: 100%;
 }
 
 .main {
@@ -28,13 +38,6 @@
 
   .mainContent {
     color: white;
-
-    h1 {
-      font-size: 1.5rem;
-      margin: 0;
-      padding: 5px 15px;
-      background-color: rgba(255, 255, 255, 0.1);
-    }
   }
 }
 
